--- a/FL12_HW4/homework/index.html
+++ b/FL12_HW4/homework/index.html
@@ -1,10 +1,215 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>FRONT-END LAB</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="topbar">
+        <div class="topbar-wrap">
+          <span class="main-nav-brand">FRONT - END LAB</span>
+          <nav class="main-nav">
+            <ul>
+              <li class="nav-item">
+                <a class="nav-item-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-item-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-item-link" href="#">Gallery</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-item-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div class="banner">
+        <div class="banner-wrap">
+          <h1>Hello! This is Front-end Lab.</h1>
+          <p>EPAM Front-end Lab</p>
+          <button>DISCOVER MORE</button>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="main-wrap">
+        <article class="article">
+          <img
+            class="article-img"
+            src="./img/blog-image1.jpg"
+            alt="blog-image1"
+          />
+          <h2 class="article-title">
+            We Help You To Make Front-end Greate Again
+          </h2>
+          <div class="article-data">
+            <img
+              class="article-data-author-img"
+              src="./img/author-image1.jpg"
+              alt="author-image1"
+            />
+            <span class="article-data-author">Jen Lopez</span>
+            <span class="article-data-date">July 22, 2017</span>
+            <span class="article-data-comments">35 Comments</span>
+          </div>
+          <div class="article-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur.
+          </div>
+          <button>Continue Reading</button>
+        </article>
+        <hr />
+        <article class="article">
+          <img
+            class="article-img"
+            src="./img/blog-image2.jpg"
+            alt="blog-image2"
+          />
+          <h2 class="article-title">
+            In pretium tellus et ante accumsan
+          </h2>
+          <div class="article-data">
+            <img
+              class="article-data-author-img"
+              src="./img/author-image2.jpg"
+              alt="author-image1"
+            />
+            <span class="article-data-author">Leo Dennis</span>
+            <span class="article-data-date">June 10, 2017</span>
+            <span class="article-data-comments">48 Comments</span>
+          </div>
+          <div class="article-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur.
+          </div>
+          <button>Continue Reading</button>
+        </article>
+        <hr />
+        <article class="article">
+          <img
+            class="article-img"
+            src="./img/blog-image3.jpg"
+            alt="blog-image3"
+          />
+          <h2 class="article-title">
+            Nam interdum maximus dolor faucibus
+          </h2>
+          <div class="article-data">
+            <img
+              class="article-data-author-img"
+              src="./img/author-image1.jpg"
+              alt="author-image1"
+            />
+            <span class="article-data-author">Jen Lopez</span>
+            <span class="article-data-date">May 30, 2017</span>
+            <span class="article-data-comments">63 Comments</span>
+          </div>
+          <div class="article-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur.
+          </div>
+          <button>Continue Reading</button>
+        </article>
+        <hr />
+        <article class="article">
+          <img
+            class="article-img"
+            src="./img/blog-image4.jpg"
+            alt="blog-image4"
+          />
+          <h2 class="article-title">
+            The ingredients that make a great burger
+          </h2>
+          <div class="article-data">
+            <img
+              class="article-data-author-img"
+              src="./img/author-image2.jpg"
+              alt="author-image1"
+            />
+            <span class="article-data-author">Leo Dennis</span>
+            <span class="article-data-date">April 18, 2017</span>
+            <span class="article-data-comments">124 Comments</span>
+          </div>
+          <div class="article-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur.
+          </div>
+          <button>Continue Reading</button>
+        </article>
+        <hr />
+        <article class="article">
+          <img
+            class="article-img"
+            src="./img/blog-image5.jpg"
+            alt="blog-image5"
+          />
+          <h2 class="article-title">
+            Vestibulum vel mauris nec ex tempus
+          </h2>
+          <div class="article-data">
+            <img
+              class="article-data-author-img"
+              src="./img/author-image1.jpg"
+              alt="author-image1"
+            />
+            <span class="article-data-author">Jen Lopez</span>
+            <span class="article-data-date">March 12, 2017</span>
+            <span class="article-data-comments">256 Comments</span>
+          </div>
+          <div class="article-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur.
+          </div>
+          <button>Continue Reading</button>
+        </article>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="footer-wrap">
+        <div class="footer-article">
+          <h2>EPAM LAB</h2>
+          <div class="footer-text">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua.
+          </div>
+          <p>Copyright &copy; 2019 EPAM</p>
+        </div>
+        <div class="footer-article">
+          <h2>Talk to us</h2>
+          <p>512 Delicious Street, San Francisco, CA 10880</p>
+          <p>010-020-0990</p>
+          <p>info@company.com</p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
