add completed task

--- a/FL12_HW5/homework/index.html
+++ b/FL12_HW5/homework/index.html
@@ -1,14 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/styles.css">
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>      
-  <title>Responsive</title>
-</head>
-<body>
-  <!-- Your code goes here -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,700&subset=latin,latin-ext"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <title>Responsive</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="header-wrap">
+        <div class="header-brand">
+          <span class="header-brand-first-word">Travel</span>
+          <span class="header-brand-second-word">Blog</span>
+        </div>
+        <nav class="main-nav">
+          <div class="sandwich-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <ul>
+            <li class="nav-item">
+              <a class="nav-item-link" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item-link" href="#">Archive</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="banner">
+      <div class="banner-wrap">
+        <h1>My awesome story</h1>
+        <p>
+          Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure
+          dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+          laoreet dolore magna aliquam erat volutpat wisi enim.
+        </p>
+      </div>
+    </div>
+    <main>
+      <div class="main-container">
+        <article class="main-container-article">
+          <div class="article-img">
+            <img src="./img/post1.jpg" alt="" />
+          </div>
+          <div class="article-content">
+            <div class="article-content-title">
+              <h1 class="article-content-title">One responsive template</h1>
+              <div class="article-date">
+                <span class="article-date-day">07</span>
+                <span class="article-date-month">mar</span>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure
+              dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+              laoreet dolore magna aliquam erat volutpat wisi enim.
+            </p>
+          </div>
+        </article>
+        <article class="main-container-article">
+          <div class="article-img">
+            <img src="./img/post2.jpg" alt="" />
+          </div>
+          <div class="article-content">
+            <div class="article-content-title">
+              <h1 class="article-content-title">Amazing travel blog</h1>
+              <div class="article-date">
+                <span class="article-date-day">06</span>
+                <span class="article-date-month">mar</span>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure
+              dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+              laoreet dolore magna aliquam erat volutpat wisi enim.
+            </p>
+          </div>
+        </article>
+        <article class="main-container-article">
+          <div class="article-img">
+            <img src="./img/post3.jpg" alt="" />
+          </div>
+          <div class="article-content">
+            <div class="article-content-title">
+              <h1 class="article-content-title">Nice minimalist travel</h1>
+              <div class="article-date">
+                <span class="article-date-day">04</span>
+                <span class="article-date-month">mar</span>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure
+              dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+              laoreet dolore magna aliquam erat volutpat wisi enim.
+            </p>
+          </div>
+        </article>
+        <article class="main-container-article">
+          <div class="article-img">
+            <img src="./img/post4.jpg" alt="" />
+          </div>
+          <div class="article-content">
+            <div class="article-content-title">
+              <h1 class="article-content-title">With amazing regions</h1>
+              <div class="article-date">
+                <span class="article-date-day">01</span>
+                <span class="article-date-month">mar</span>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure
+              dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+              laoreet dolore magna aliquam erat volutpat wisi enim.
+            </p>
+          </div>
+        </article>
+        <article class="main-container-article footer-article">
+          <div class="article-content">
+            <div class="article-content-title">
+              <h1 class="article-content-title">
+                And again - it's totally amazing
+              </h1>
+              <div class="article-date">
+                <span class="article-date-day">27</span>
+                <span class="article-date-month">feb</span>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure
+              dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+              laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim
+              veniam
+            </p>
+          </div>
+        </article>
+      </div>
+      <div class="main-aside">
+        <aside>
+          <div class="main-aside-news">
+            <div class="main-aside-img">
+              <img src="./img/news1.jpg" alt="" />
+            </div>
+            <div class="main-aside-news-content">
+              <h1>This is the first news on blog</h1>
+              <p>
+                Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu
+                iriure dolor adipiscing elit, sed diam nonummy nibh euismod
+                tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
+                enim ad minim veniam
+              </p>
+            </div>
+          </div>
+          <div class="main-aside-news">
+            <div class="main-aside-img">
+              <img src="./img/news2.jpg" alt="" />
+            </div>
+            <div class="main-aside-news-content">
+              <h1>Second news on the Travel blog</h1>
+              <p>
+                Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu
+                iriure dolor adipiscing elit, sed diam nonummy nibh euismod
+                tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
+                enim ad minim veniam
+              </p>
+            </div>
+          </div>
+        </aside>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="footer-wrap">
+        <div class="footer-leftside">
+          <span>Copyright 2019, Epam systems</span>
+          <span
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+            reiciendis.</span
+          >
+        </div>
+        <div class="footer-rightside">
+          <span>Design and coding</span>
+          <span>by Kateryna Dorodko</span>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
