fix validation errors

--- a/FL12_HW5/homework/index.html
+++ b/FL12_HW5/homework/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -44,7 +44,7 @@
     </header>
     <div class="banner">
       <div class="banner-wrap">
-        <h1>My awesome story</h1>
+        <h2>My awesome story</h2>
         <p>
           Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure
           dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
@@ -60,7 +60,7 @@
           </div>
           <div class="article-content">
             <div class="article-content-title">
-              <h1 class="article-content-title">One responsive template</h1>
+              <h2 class="article-content-title">One responsive template</h2>
               <div class="article-date">
                 <span class="article-date-day">07</span>
                 <span class="article-date-month">mar</span>
@@ -79,7 +79,7 @@
           </div>
           <div class="article-content">
             <div class="article-content-title">
-              <h1 class="article-content-title">Amazing travel blog</h1>
+              <h2 class="article-content-title">Amazing travel blog</h2>
               <div class="article-date">
                 <span class="article-date-day">06</span>
                 <span class="article-date-month">mar</span>
@@ -98,7 +98,7 @@
           </div>
           <div class="article-content">
             <div class="article-content-title">
-              <h1 class="article-content-title">Nice minimalist travel</h1>
+              <h2 class="article-content-title">Nice minimalist travel</h2>
               <div class="article-date">
                 <span class="article-date-day">04</span>
                 <span class="article-date-month">mar</span>
@@ -117,7 +117,7 @@
           </div>
           <div class="article-content">
             <div class="article-content-title">
-              <h1 class="article-content-title">With amazing regions</h1>
+              <h2 class="article-content-title">With amazing regions</h2>
               <div class="article-date">
                 <span class="article-date-day">01</span>
                 <span class="article-date-month">mar</span>
@@ -133,9 +133,9 @@
         <article class="main-container-article footer-article">
           <div class="article-content">
             <div class="article-content-title">
-              <h1 class="article-content-title">
+              <h2 class="article-content-title">
                 And again - it's totally amazing
-              </h1>
+              </h2>
               <div class="article-date">
                 <span class="article-date-day">27</span>
                 <span class="article-date-month">feb</span>
@@ -157,7 +157,7 @@
               <img src="./img/news1.jpg" alt="" />
             </div>
             <div class="main-aside-news-content">
-              <h1>This is the first news on blog</h1>
+              <h2>This is the first news on blog</h2>
               <p>
                 Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu
                 iriure dolor adipiscing elit, sed diam nonummy nibh euismod
@@ -171,7 +171,7 @@
               <img src="./img/news2.jpg" alt="" />
             </div>
             <div class="main-aside-news-content">
-              <h1>Second news on the Travel blog</h1>
+              <h2>Second news on the Travel blog</h2>
               <p>
                 Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu
                 iriure dolor adipiscing elit, sed diam nonummy nibh euismod
